--- a/Crowdsource/assets/css/main.css
+++ b/Crowdsource/assets/css/main.css
@@ -2139,69 +2139,327 @@ margin: 0 0 40px 0;
 				}
 
 /* Nav */
-
-	#nav {
-		background-color: #f0f6f6;
-		text-align: right;
-		position: fixed;
-		left: 0;
-		top: 0;
-		width: 100%;
-		z-index: 10000;
-		cursor: default;
-		height: 3.5em;
-		line-height: 3.5em;
+@media (min-width: 992px) {
+  
+	header{
+	  max-width: 1000px;
+	  margin-left: auto;
+	  margin-right: auto;
 	}
+	
+	.navbar {
+	  width: 100%;
+	  background-color: #f9f9f9;
+	  border: thin solid #ededed;
+	  height: 44px;
+	}
+	.navbar .logo {
+	  padding: 11px;
+	  font-size: 0.9375em;
+	  font-weight: 800;
+	  float: left;
+	}
+  }
+  #hamburger {
+	width: 30px;
+	position: relative;
+	margin: auto;
+	-webkit-transform: rotate(0deg);
+	-moz-transform: rotate(0deg);
+	-o-transform: rotate(0deg);
+	transform: rotate(0deg);
+	-webkit-transition: .5s ease-in-out;
+	-moz-transition: .5s ease-in-out;
+	-o-transition: .5s ease-in-out;
+	transition: .5s ease-in-out;
+	cursor: pointer;
+  }
+  
+  #hamburger span {
+	display: block;
+	position: absolute;
+	height: 5px;
+	width: 100%;
+	background: #333;
+	border-radius: 9px;
+	opacity: 1;
+	left: 7px;
+	-webkit-transform: rotate(0deg);
+	-moz-transform: rotate(0deg);
+	-o-transform: rotate(0deg);
+	transform: rotate(0deg);
+	-webkit-transition: .25s ease-in-out;
+	-moz-transition: .25s ease-in-out;
+	-o-transition: .25s ease-in-out;
+	transition: .25s ease-in-out;
+  }
+  
+  #hamburger span:nth-child(1) {
+	top: 0px;
+  }
+  
+  #hamburger span:nth-child(2) {
+	top: 11px;
+  }
+  
+  #hamburger span:nth-child(3) {
+	top: 22px;
+  }
+  
+  #hamburger.open span:nth-child(1) {
+	top: 11px;
+	-webkit-transform: rotate(135deg);
+	-moz-transform: rotate(135deg);
+	-o-transform: rotate(135deg);
+	transform: rotate(135deg);
+  }
+  
+  #hamburger.open span:nth-child(2) {
+	opacity: 0;
+	left: -30px;
+  }
+  
+  #hamburger.open span:nth-child(3) {
+	top: 11px;
+	-webkit-transform: rotate(-135deg);
+	-moz-transform: rotate(-135deg);
+	-o-transform: rotate(-135deg);
+	transform: rotate(-135deg);
+  }
+  
+  .sitenavigation ul {
+	margin: 0;
+	padding: 0;
+	float: right;
+  }
+  .sitenavigation li {
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
+	display: inline-block;
+	margin-left: -4px;
+	line-height: 20px;
+  }
+  .sitenavigation li.nav-dropdown:hover > a {
+	background-color: #CCC !important;
+	color: #000;
+  }
+  .sitenavigation li a {
+	color: #758283;
+	text-decoration: none;
+	display: block;
+	padding: 11px 14px;
+	font-size: 0.9375em;
+	-webkit-tap-highlight-color: transparent;
+  }
+  .sitenavigation li a.nav-path-selected, .sitenavigation li a.linkclicked {
+	color: white;
+	background-color: #ECECEC;
+  }
+  .sitenavigation li a.nav-selected {
+	background-color: #777;
+	color: #000;
+  }
+  .sitenavigation li a:hover {
+	background-color: #CCC !important;
+	color: #000;
+  }
+  .sitenavigation li.clicked > ul {
+	display: block;
+  }
+  .sitenavigation li ul {
+	display: none;
+	position: absolute;
+	min-width: 200px;
+	max-width: 300px;
+	padding: 0;
+	margin: 0;
+  }
+  .sitenavigation li ul a {
+	background-color: #dfdfdf;
+	font-size: 0.8125em;
+  }
+  .sitenavigation li ul li {
+	float: none;
+	display: block;
+	margin: 0;
+  }
+  .sitenavigation li ul ul {
+	left: 100%;
+	margin-top: -40px;
+  }
+  .sitenavigation li ul ul a {
+	background-color: lightgray;
+  }
+  .sitenavigation .nav-dropdown:hover > a, .sitenavigation .nav-dropdown.clicked > a {
+	background-color: #ECECEC;
+  }
+  
+  .no-js .sitenavigation li:hover > ul {
+	display: block !important;
+  }
+  
+  .menu-icon {
+	display: none;
+  }
+  
+  @media (max-width: 991px) {
+	.navbar {
+	  width: 100%;
+	  background-color: #f9f9f9;
+	  border: thin solid #ededed;
+	  height: 44px;
+	  position: absolute;
+	  top: 0;
+	  left: 0;
+	  right: 0;
+	  max-width: 100%;
+	  z-index: 1;
+	}
+	.navbar .logo {
+	  float: right;
+	  font-weight: 800;
+	  padding: 5px;
+	  margin: 10px;
+	}
+	.navbar .menu-icon {
+	  width: 30px;
+	  height: 25px;
+	  padding-top: 0;
+	  margin-top: 7px;
+	  display: block;
+	  -webkit-tap-highlight-color: transparent;
+	  padding: 5px;
+	  padding-top: 1px;
+	  padding-bottom: 12px;
+	  margin-bottom: 10px;
+	  cursor: pointer;
+	}
+	.navbar .sitenavigation ul {
+	  display: none;
+	  max-width: none !important;
+	}
+	.navbar .sitenavigation li {
+	  float: none;
+	  display: block;
+	  margin: 0;
+	  padding: 0;
+	}
+	.navbar .sitenavigation.is-tapped > ul {
+	  display: block;
+	  position: absolute;
+	  margin: 0;
+	  background-color: #FFF;
+	  right: 0;
+	  left: 0;
+	  z-index: 100;
+	  padding: 0;
+	}
+	.navbar .sitenavigation.is-tapped > ul a {
+	  width: 100%;
+	  margin: 0;
+	  background-color: #ECECEC;
+	  display: block;
+	  font-size: 1.1875em;
+	  padding-top: 10px;
+	  padding-bottom: 10px;
+	  padding-left: 20px;
+	  padding-right: 20px;
+	  height: auto;
+	  color: #758283;
+	  float: none;
+	  border: none !important;
+	  -webkit-font-smoothing: antialiased;
+	  -webkit-tap-highlight-color: transparent;
+	}
+	.navbar .sitenavigation.is-tapped > ul a:hover {
+	  background-color: #dfdfdf;
+	}
+	.navbar .sitenavigation.is-tapped > ul li {
+	  width: 100%;
+	  background-color: #f7f7f7;
+	  border-bottom: solid 1px #b9b9b9;
+	  -webkit-tap-highlight-color: transparent;
+	}
+	.navbar .sitenavigation.is-tapped > ul li li {
+	  background-color: #fff;
+	}
+	.navbar .sitenavigation.is-tapped > ul ul {
+	  display: none;
+	  width: 100%;
+	  z-index: 200;
+	  border: none;
+	  margin-left: 0;
+	  padding: 0;
+	  position: relative !important;
+	}
+	.navbar .sitenavigation.is-tapped > ul ul ul {
+	  clear: both;
+	  left: 0;
+	  margin-top: 0;
+	}
+	.navbar .sitenavigation.is-tapped > ul ul li {
+	  border-bottom: solid 1px #f9f9f9;
+	}
+	.navbar .sitenavigation.is-tapped > ul ul li li a {
+	  background-color: #f9f9f9;
+	  padding-left: 30px;
+	}
+	.navbar .sitenavigation.is-tapped > ul ul a {
+	  background-color: #dfdfdf;
+	  font-size: 1em;
+	  padding-left: 20px;
+	}
+	.navbar .sitenavigation.is-tapped > ul ul a:before {
+	  content: "- ";
+	  display: inline-block;
+	  margin-right: 8px;
+	  color: #000;
+	}
+	.navbar .sitenavigation.is-tapped > ul li.nav-dropdown {
+	  cursor: pointer;
+	}
+	.navbar .sitenavigation.is-tapped > ul li.nav-dropdown > a {
+	  width: 80%;
+	}
+	.navbar .sitenavigation.is-tapped > ul li.nav-dropdown:after {
+	  content: "\f107";
+	  font-family: FontAwesome;
+	  position: absolute;
+	  color: #000;
+	  padding: 0;
+	  display: block;
+	  width: 20%;
+	  right: 0;
+	  margin-top: -40px;
+	  text-align: center;
+	  font-size: 16px;
+	  font-weight: 700;
+	  padding-top: 10px;
+	  padding-bottom: 10px;
+	}
+	.navbar .sitenavigation.is-tapped > ul li.expanded:after {
+	  display: none;
+	}
+	.navbar .sitenavigation.is-tapped > ul li.expanded li:first-child:before {
+	  content: "\f106";
+	  font-family: FontAwesome;
+	  position: absolute;
+	  color: black;
+	  padding: 0;
+	  display: block;
+	  width: 20%;
+	  right: 0;
+	  margin-top: -40px;
+	  text-align: center;
+	  font-size: 16px;
+	  font-weight: 700;
+	  padding-top: 10px;
+	  padding-bottom: 10px;
+	}
+  }
 
-		#nav ul {
-			margin-bottom: 0;
-			list-style: none;
-			padding-left: 0;
-		}
-
-		#nav li {
-			display: inline-block;
-			padding-left: 0;
-		}
-
-		#nav a {
-			-moz-transition: background-color .2s ease-in-out;
-			-webkit-transition: background-color .2s ease-in-out;
-			-ms-transition: background-color .2s ease-in-out;
-			transition: background-color .2s ease-in-out;
-			position: relative;
-			display: block;
-			color: #fff;
-			text-decoration: none;
-			outline: 0;
-			font-weight: 600;
-			border-radius: 8px;
-			color: rgb(2, 0, 0);
-			height: 2.5em;
-			line-height: 2.5em;
-			padding: 0 1.25em;
-		}
-
-			#nav a:hover {
-				color: #fff !important;
-				background: #383838;
-			}
-
-			#nav a.active {
-				background: #484848;
-			}
-
-				#nav a.active:before {
-					content: '';
-					display: block;
-					position: absolute;
-					bottom: -0.6em;
-					left: 50%;
-					margin-left: -0.75em;
-					border-left: solid 0.75em transparent;
-					border-right: solid 0.75em transparent;
-					border-top: solid 0.6em #282828;
-				}
+	
 
 /* Articles */
 
