--- a/Crowdsource/assets/css/main.css
+++ b/Crowdsource/assets/css/main.css
@@ -258,7 +258,7 @@ yellow {
   padding:0;
 }
 #timer{
-  background-image: url(images/banner.svg);
+  background-image: url(/images/banner.svg);
   
   
 }
