--- a/Crowdsource/assets/css/main.css
+++ b/Crowdsource/assets/css/main.css
@@ -276,7 +276,7 @@ yellow {
   
 }
 .bg-text {
-  color: honeydew;
+  color: #0c1a36;
   padding-top: 5px;
   font-size: 1.5vw;
   font-weight: 800;
