--- a/Crowdsource/assets/css/main.css
+++ b/Crowdsource/assets/css/main.css
@@ -271,12 +271,12 @@ yellow {
   padding:0;
 }
 #timer{
-  background-image: url(/images/banner2.jpg);
+  background-image: url(images/banner2.jpg);
   
   
 }
 .bg-text {
-  color: #0c1a36;
+  color: white;
   padding-top: 5px;
   font-size: 1.5vw;
   font-weight: 800;
