--- a/Crowdsource/assets/css/main.css
+++ b/Crowdsource/assets/css/main.css
@@ -196,6 +196,7 @@ yellow {
 .hui {
   float: left;
 }
+
 .typewriter {
   color: #fff;
   font-family: monospace;
@@ -271,11 +272,11 @@ yellow {
   height: 15vh;
   padding-top: 6vh;
   font-family: Georgia, 'Times New Roman', Times, serif;
-  -webkit-text-stroke: 1.5px rgb(4, 4, 29);
-  background-image: url(../images/banner.jpg);
+  -webkit-text-stroke: 1.5px rgb(252, 247, 247);
+  background-image: linear-gradient(270deg,#4285F4,#ce2112,#F4B400,#0F9D58,#4285F4);
   -webkit-background-clip: text;
-  background-position: 0 0;
-  animation: back 5s linear infinite;
+    -webkit-text-fill-color: transparent;  
+  animation: back 25s cubic-bezier(1, 0.37, 0.24, 0.43) infinite;
 }
 .timer1{
   margin: 0;
@@ -287,16 +288,16 @@ yellow {
   padding-top: 5px;
   font-size: 2vw;
   font-weight: 800;
-  -webkit-text-stroke: 1px rgb(4, 4, 29);
-  background-image: url("/images/banner.png");
+  -webkit-text-stroke: 1.5px rgb(59, 157, 33);
+  background-image: linear-gradient(270deg,#4285F4,#ce2112,#F4B400,#0F9D58,#4285F4);
   -webkit-background-clip: text;
-  background-position: 0 0;
-  animation: back 5s linear infinite;
+    -webkit-text-fill-color: transparent;  
+  animation: back 25s cubic-bezier(1, 0.37, 0.24, 0.43) infinite;
 }
 @keyframes back {
-  100%{
-    background-position: 800px 0;
-  }
+  to {
+    background-position: 900vw;
+}
   
 }
 .video-bg{
@@ -317,11 +318,12 @@ yellow {
   color:transparent;
   font-weight: 900;
   padding-top: 5vh;
-  -webkit-text-stroke: 1.5px rgb(4, 4, 29);
-  background-image: url('/images/banner.jpg');
+  padding-bottom:7vh ;
+  -webkit-text-stroke: 1.5px rgb(12, 11, 11);
+  background-image: linear-gradient(270deg,#4285F4,#ce2112,#F4B400,#0F9D58,#4285F4);
   -webkit-background-clip: text;
-  background-position: 0 0;
-  animation: back 10s linear infinite;
+    -webkit-text-fill-color: transparent;  
+  animation: back 25s cubic-bezier(1, 0.37, 0.24, 0.43) infinite;
 }
 
 .ptag {
@@ -331,7 +333,7 @@ yellow {
 }
 .event-img {
   width: 40rem;
-  height: 20rem;
+  height: 35vw;
   padding: 0.1rem;
   border: 0.5vw black solid;
   border-radius: 20px;
