--- a/Crowdsource/assets/css/main.css
+++ b/Crowdsource/assets/css/main.css
@@ -288,7 +288,7 @@ yellow {
   padding-top: 5px;
   font-size: 2vw;
   font-weight: 800;
-  -webkit-text-stroke: 1.5px rgb(59, 157, 33);
+  -webkit-text-stroke: 0.5px rgb(59, 157, 33);
   background-image: linear-gradient(270deg,#4285F4,#ce2112,#F4B400,#0F9D58,#4285F4);
   -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;  
@@ -319,8 +319,8 @@ yellow {
   font-weight: 900;
   padding-top: 5vh;
   padding-bottom:7vh ;
-  -webkit-text-stroke: 1.5px rgb(12, 11, 11);
-  background-image: linear-gradient(270deg,#4285F4,#ce2112,#F4B400,#0F9D58,#4285F4);
+  -webkit-text-stroke: 0.5px rgb(12, 11, 11);
+  background: linear-gradient(270deg,#4285F4,#ce2112,#F4B400,#0F9D58,#4285F4);
   -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;  
   animation: back 25s cubic-bezier(1, 0.37, 0.24, 0.43) infinite;
