--- a/Crowdsource/assets/css/main.css
+++ b/Crowdsource/assets/css/main.css
@@ -284,9 +284,9 @@ yellow {
 }
 
 .bg-text {
-  color:transparent;
-  padding-top: 5px;
-  font-size: 2vw;
+ color:transparent;
+  padding-bottom: 4px;
+  font-size: 3vw;
   font-weight: 800;
   -webkit-text-stroke: 0.5px rgb(59, 157, 33);
   background-image: linear-gradient(270deg,#4285F4,#ce2112,#F4B400,#0F9D58,#4285F4);
