--- a/Crowdsource/assets/css/main.css
+++ b/Crowdsource/assets/css/main.css
@@ -173,6 +173,26 @@ yellow {
   color: #f4b400;
   font-weight: 700;
 }
+gliter{
+  color:transparent;
+  font-weight: 900;
+ font-size: larger;
+  -webkit-text-stroke: 0.5px rgb(12, 11, 11);
+  background: linear-gradient(230deg,#4285F4,#ce2112,rgb(255, 255, 62),#0F9D58,#4285F4);
+  -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;  
+  animation: back 25s cubic-bezier(0, 0, 0.35,-0.01) infinite;
+}
+gliters{
+  color:transparent;
+  font-weight: 900;
+ font-size: larger;
+  -webkit-text-stroke: 0.5px rgb(12, 11, 11);
+  background: linear-gradient(230deg,#4285F4,pink,rgb(203, 11, 11),purple,#4285F4);
+  -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;  
+  animation: back 25s cubic-bezier(0, 0, 0.35,-0.01) infinite;
+}
 .members {
   font-size: 4.6rem;
   padding-bottom: 3px;
@@ -232,6 +252,7 @@ yellow {
   padding-bottom: 0;
   margin-bottom: 0;
 }
+
 .gifevent{
   width: 12vw;
   
@@ -239,7 +260,13 @@ yellow {
 }
 
 .Speaker-abt{
-  font-size: 8vw;
+  font-size: 5vw;
+  color: rgb(59, 3, 59);
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-style: italic;
+  font-weight: 900;
+  font-style: oblique;
+
 }
 .connect{
   color:#002b3c;
@@ -265,13 +292,13 @@ yellow {
 
 .timer {
   font-size: 5.6vw;
-  margin-bottom: 3em;
-  padding-bottom: 0.5em;
+  margin-bottom: 3.2em;
+  padding-bottom: 0.7em;
   color:transparent;
   font-weight: 900;
-  height: 15vh;
+  height: 16vh;
   padding-top: 6vh;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-text-stroke: 1.5px rgb(252, 247, 247);
   background-image: linear-gradient(270deg,#4285F4,#ce2112,#F4B400,#0F9D58,#4285F4);
   -webkit-background-clip: text;
@@ -354,6 +381,200 @@ yellow {
   justify-content: left;
   flex-direction: column;
   z-index: 1;
+}
+
+.nov{
+  display:grid;
+  justify-content: center;
+  
+}
+.nov-text{
+  width: 90vw;
+  text-align:justify;
+  font-size:2vw;
+  font-weight: 400;
+}
+.nov-box{
+  display:grid;
+}
+.images-d{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-block: 3vw;
+  
+  
+  
+}
+.nov-ul{
+  text-align:justify;
+  font-size:2vw;
+  font-weight: 700;
+  
+  
+}
+
+.key{
+  color: #000;
+  font-size:3.5vw;
+  margin-bottom:10px ;
+  font-family: sans-serif;
+}
+
+.nov-img{
+display: flex;
+justify-content: right;
+align-items: flex-end;
+}
+.detail-abt{
+  display: flex;
+  justify-content: left;
+  align-items: flex-start;
+  left: 0;
+  right: -10;
+}
+
+.img-nov{
+  height: 35vw;
+  width: 40vw;
+}
+
+
+
+
+
+
+.launch{
+  font-size: 3vw;
+  font-weight: 500;
+  font-family:Georgia, 'Times New Roman', Times, serif;
+}
+
+
+/*slider*/
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  width: 100%;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/*registration form*/
+.embbed{
+ 
+  justify-content: center;
+  align-items: center;
+  border:8px solid rgb(84, 71, 146);
+  border-radius: 30px;
+  padding-bottom: 3px;
+  margin-bottom: 3px;
+  margin-top: 3px;
+}
+.formstyle{
+  width: 100vw;
+  height: 210vh;
+  top: 0;
+  margin-bottom: 0;
+  padding-bottom: 0;
+
+}
+.reg{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.regf{
+  font-size: 5vw;
+}
+.color-reg{
+  color: red;
 }
 
 
