--- a/Crowdsource/assets/css/main.css
+++ b/Crowdsource/assets/css/main.css
@@ -173,6 +173,10 @@ yellow {
   color: #f4b400;
   font-weight: 700;
 }
+grey{
+  color: grey;
+  font-weight: 700;
+}
 gliter{
   color:transparent;
   font-weight: 900;
@@ -261,11 +265,13 @@ gliters{
 
 .Speaker-abt{
   font-size: 5vw;
-  color: rgb(59, 3, 59);
+  color:transparent;
   font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-style: italic;
   font-weight: 900;
+  -webkit-text-stroke: 3px purple;
   font-style: oblique;
+ /* margin-top: -10vh;*/
 
 }
 .connect{
@@ -294,7 +300,7 @@ gliters{
   font-size: 5.6vw;
   margin-bottom: 3.2em;
   padding-bottom: 0.7em;
-  color:transparent;
+  color: rgb(160, 201, 56);
   font-weight: 900;
   height: 16vh;
   padding-top: 6vh;
@@ -391,8 +397,8 @@ gliters{
 .nov-text{
   width: 90vw;
   text-align:justify;
-  font-size:2vw;
-  font-weight: 400;
+  font-size:1.5vw;
+  font-weight: 600;
 }
 .nov-box{
   display:grid;
@@ -435,8 +441,10 @@ align-items: flex-end;
 }
 
 .img-nov{
-  height: 35vw;
-  width: 40vw;
+  height: 45vw;
+  width: 90vw;
+  border: 12px solid rgb(147, 108, 108);
+  border-radius: 10px;
 }
 
 
